# ali-iot

iotkit/: CMakeLists.txt
iotkit/eng/: sdk_include.h
iotkit/eng/infra/: infra_config.h  infra_timer.c
iotkit/eng/mqtt/: iotx_mqtt_client.c  iotx_mqtt_client.h  iotx_mqtt_config.h  mqtt_api.c  mqtt_api.h  mqtt_internal.h
iotkit/eng/wrappers/: wrapper.c
